// Vitest Snapshot v1

exports[`plugins/rem > should not run htmlPlugin with enableRuntime is false 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "pxToRem": {
                "propList": [
                  "*",
                ],
                "rootValue": 50,
                "unitPrecision": 5,
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/rem > should not run rem plugin when false 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/rem > should not run rem plugin without config 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/rem > should run rem plugin with custom config 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "pxToRem": {
                "propList": [
                  "font-size",
                ],
                "rootValue": 30,
                "unitPrecision": 5,
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    AutoSetRootFontSizePlugin {
      "HtmlPlugin": [Function],
      "name": "AutoSetRootFontSizePlugin",
      "options": {
        "enableRuntime": true,
        "excludeEntries": [],
        "maxRootFontSize": 64,
        "pxtorem": {
          "propList": [
            "font-size",
          ],
        },
        "rootFontSize": 30,
        "rootFontSizeVariableName": "ROOT_FONT_SIZE",
        "screenWidth": 375,
        "supportLandscape": false,
        "useRootFontSizeBeyondMax": false,
        "widthQueryKey": "",
      },
      "webpackEntries": [],
    },
  ],
}
`;

exports[`plugins/rem > should run rem plugin with default config 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "pxToRem": {
                "propList": [
                  "*",
                ],
                "rootValue": 50,
                "unitPrecision": 5,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.less\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "pxToRem": {
                "propList": [
                  "*",
                ],
                "rootValue": 50,
                "unitPrecision": 5,
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<ROOT>/compiled/@rspack/less-loader",
            "options": {
              "implementation": "<ROOT>/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "pxToRem": {
                "propList": [
                  "*",
                ],
                "rootValue": 50,
                "unitPrecision": 5,
              },
              "sourceMap": true,
            },
          },
          {
            "builtinLoader": "sass-loader",
            "options": {
              "rspackImporter": true,
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    AutoSetRootFontSizePlugin {
      "HtmlPlugin": [Function],
      "name": "AutoSetRootFontSizePlugin",
      "options": {
        "enableRuntime": true,
        "excludeEntries": [],
        "maxRootFontSize": 64,
        "rootFontSize": 50,
        "rootFontSizeVariableName": "ROOT_FONT_SIZE",
        "screenWidth": 375,
        "supportLandscape": false,
        "useRootFontSizeBeyondMax": false,
        "widthQueryKey": "",
      },
      "webpackEntries": [],
    },
  ],
}
`;
